Senior_Project/src/senior/project/test/server/errors/ServerInvalidAmountException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidAmountException extends Exception {

  public ServerInvalidAmountException(String msg) {
    super(msg);
  }
}
